--- a/index.html
+++ b/index.html
@@ -5,11 +5,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
   <link rel="stylesheet" href="main.css">
   <title>freeCodeCamp Random Quote Machine</title>
 </head>
 
-<body>
+<body class="blue lighten-1">
+  <div class="container box">
+    <div class="row">
+      <div class="col m2"></div>
+      <div class="col s12 m8">
+        <div class="card small grey lighten-2">
+          <div class="card-content blue-text">
+            <span class="card-title">Author: <span id="author_name"></span></span>
+            <p>
+              <i class="material-icons">format_quote</i>
+              <span id="quote_message"></span>
+              <i class="material-icons">format_quote</i>
+            </p>
+          </div>
+          <div class="card-action">
+            <button id="new_quote" class="btn blue">New Quote</button>
+            <a id="twitter" class="btn right blue" target="_blank" data-size="large">twitter</a>
+          </div>
+        </div>
+      </div>
+      <div class="col m2"></div>
+    </div>
+  </div>
   <script src="app.js"></script>
 </body>
 
